hw5/sashank/hw4/autog/03-17.19-03.out
HW4Grader.java:74: error: possible loss of precision
	    int index = sim.myCache.getIndex(addr);
	                                    ^
  required: int
  found:    long
1 error

Compiler error. At least one needed class was not created.
(ALERT! Please make sure you have added an 's' to the variables:
	 total_bytes_tranferred_wb and total_bytes_tranferred_wt (add the s to get --> tran-S-ferred)
which were sadly/embarrassingly mis-spelled at first...)
